# arvix-survey

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml  test.yml
src/: latex.rs  lib.rs  main.rs
src/latex/: bibliography.rs  citation.rs  mod.rs  parser.rs  verification.rs
tests/: cli_integration_test.rs  example.bbl  test.rs  test_bbl.rs  test_bibliography.rs  test_citation.rs  test_integration.rs  test_lib.rs  test_parser.rs  test_verification.rs
tests/fixtures/: 4.bbl
