[package]
name = "arvix-survey"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
zip = "2.6.1"
regex = "1.8"
thiserror = "2.0.12"
tempfile = "3.5"
log = "0.4"
env_logger = "0.11.8"
walkdir = "2.3"
flate2 = "1.0"
tar = "0.4"
serde_json = "1.0"
rayon = "1.8.0"
futures = "0.3"
tokio = { version = "1.32", features = ["full"] }
once_cell = "1.21.3"

