[package]
name = "bibextract"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bibextract"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
pyo3 = "0.25.0"
reqwest = { version = "0.12.15", features = ["blocking", "json", "system-proxy"], default-features = false }
tokio = { version = "1.46", features = ["full"] }
clap = { version = "4.3", features = ["derive"] }
anyhow = { version = "1.0", default-features = false }
zip = { version = "2.6.1", features = ["constant_time_eq", "lzma", "zopfli"]}
regex = "1.8"
thiserror = { version = "2.0.12", default-features = false }
tempfile = { version = "3.5", default-features = false }
log = "0.4"
env_logger = { version = "0.11.8", default-features = false }
walkdir = "2.3"
flate2 = "1.1.2"
tar = { version = "0.4", default-features = false }
serde_json = "1.0"
once_cell = { version = "1.21.3", features = ["race"], default-features = false }
backoff = { version = "0.4", features = ["futures", "tokio"], default-features = false }

[dev-dependencies]
assert_cmd = "2.0"
predicates = { version = "2.1", default-features = false }
mockito = { version = "1.7.0", default-features = false }
tokio = { version = "1.46", features = ["test-util"] }
tempfile = { version = "3.0", default-features = false }
tar = { version = "0.4", default-features = false }
flate2 = "1.1.2"
backoff = { version = "0.4", features = ["futures", "tokio"], default-features = false }
