[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "bibextract"
version = "0.1.0"
description = "Extract survey content and bibliography from arXiv papers"
authors = [
    {name = "Gautier Dagan", email = "gautier.dagan@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
keywords = ["arxiv", "latex", "bibliography", "survey", "research"]
dependencies = []

dev-dependencies = [
    "pytest>=8.3.5",
]

[project.urls]
Homepage = "https://github.com/gautierdag/bibextract"
Repository = "https://github.com/gautierdag/bibextract"
Issues = "https://github.com/gautierdag/bibextract/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
